# kaggle-competitions

./: .gitignore  .pre-commit-config.yaml  README.md  conda-lock.yml  environment-linux.yml  environment-osx.yml  environment.yml  pyproject.toml
data/: example.csv
google_research_contrails/: .gitignore  Makefile
google_research_contrails/data/train/1001436206602675989/: band_08.npy  band_09.npy  band_10.npy  band_11.npy  band_12.npy  band_13.npy  band_14.npy  band_15.npy  band_16.npy  human_individual_masks.npy  human_pixel_masks.npy
google_research_contrails/data/train/10016536018877742/: band_08.npy  band_09.npy  band_10.npy  band_11.npy  band_12.npy  band_13.npy  band_14.npy  band_15.npy  band_16.npy  human_individual_masks.npy  human_pixel_masks.npy
google_research_contrails/data/train/1001792196232384964/: band_08.npy  band_09.npy  band_10.npy  band_11.npy  band_12.npy  band_13.npy  band_14.npy  band_15.npy  band_16.npy
google_research_contrails/data/train/1002294268041839364/: band_08.npy  band_09.npy  band_10.npy  band_11.npy  band_12.npy  band_13.npy  band_14.npy  band_15.npy  band_16.npy  human_individual_masks.npy  human_pixel_masks.npy
google_research_contrails/models/: model.txt
google_research_contrails/notebooks/: data_explorations.ipynb  example.ipynb
google_research_contrails/src/: example.py
notebooks/: example.ipynb
src/: example.py
