[tool.poetry]
name = "kaggle-competitions"
version = "0.1.0"
description = "Python development environment for ML/DL Kaggle competitions"
authors = ["dupe <njdupe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
boto3 = "^1.26.137"
kaggle = "^1.5.13"
numpy = "^1.24.3"
python = "3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
